app/assets/stylesheets/static_pages.scss
@import "lib";

html{
  overflow-x: hidden;
}

section#home-1{
  background-image: image-url('face.jpg');
  background-size: cover;
  background-attachment: fixed;
  width: 92vw;
  height: 82vmin;
  font: 300 7vw 'Raleway', helvetica, sans-serif;
  text-align: right;
  padding-right:20vw;
  position: relative;
  line-height: 82vmin;
  color: rgba(255,255,255,0.8);
}

section#home-2{
  margin-top:0.2rem;
  padding-bottom: 2rem; 
  div.col{
    @include span-columns(4, 0.15);
    display: inline-block;
  }
}

span.platform-item img{
  
  width: 100%;
  display: block;
  opacity:0.5;

  &:hover{
    cursor: pointer;
  }
}

span.platform-item{
  position: relative;
  display: block;
  margin-bottom: 1%;
  background-color: #333333;

  div{
    width:100%;
    height:100%;
    
    a{
      top:0;
      width: 100%;
      height: 100%;
      position: absolute;
      font: 1.5vw 'Raleway', helvetica, sans-serif;
      font-weight: lighter;
      color: #fff;
      text-shadow: 0 0 10px black;
      display: flex;
      align-items: center;
      justify-content: center;
      opacity:0.9;
      transition: background-color .2s ease-in-out;
      -moz-transition: background-color .2s ease-in-out;
      -webkit-transition: background-color .2s ease-in-out;
      
      
      &:hover{
        background-color: rgba(19, 104, 107, 0.6);
      }
      
    }
      
  }
}


section#static_pages{
  @include outer-container(64rem);
  padding: 1.5rem 3rem;

  div.title{
    font-size: 4rem;
    text-align: center;
    color: #366;
    max-width: 70%;
    margin: 0 auto;
    border-bottom: 3px solid #366;
  }
}

div#birds{
  position: absolute;
  z-index: -1;
}

div.penta canvas{
  margin: 0 auto;
  display: block;
}

@media screen and (max-width: 700px){
 
  section#home-2 div.col{
    @include span-columns(12, 15);
  }
  
  span.platform-item{
    div{
      a{
        font: 3.5vw 'Raleway', helvetica, sans-serif;
        font-weight: lighter;
      }
    }
  }

}

